<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.simbasfriends.activities.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_new_event"
        android:name="com.example.simbasfriends.activities.ui.newEvent.NewEventFragment"
        android:label="@string/new_event"
        tools:layout="@layout/fragment_new_event" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.simbasfriends.activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.simbasfriends.activities.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.simbasfriends.activities.ui.profile.FriendsFragment"
        android:label="@string/title_friendsList"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.simbasfriends.activities.ui.profile.SettingsFragment"
        android:label="Settings" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.simbasfriends.activities.ui.profile.UserProfileFragment"
        android:label="User Profile"
        tools:layout="@layout/fragment_user_profile">
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.simbasfriends.activities.ui.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="friendId"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

</navigation>