<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <!-- Profile Image -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="12dp"
        android:background="@drawable/circle_background" />

    <!-- Name & Dog Name -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/userDogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:text="@string/dog_name"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Chat Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:paddingHorizontal="8dp"
            android:textSize="12sp"
            android:backgroundTint="@color/purple"
            app:cornerRadius="10dp"
            android:layout_marginStart="10dp"/>
        <!-- Profile Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:paddingHorizontal="8dp"
            android:textSize="12sp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</LinearLayout>
