<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".activities.WelcomeActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/welcome_activity_dog_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/welcomelogo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen_title"
        android:textSize="18pt"
        android:fontFamily="serif"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_activity_Sign_Up_Button"
        android:layout_width="@dimen/welcome_btn"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="@color/dark_green"
        app:cornerRadius="30dp"
        android:text="@string/sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_activity_Log_In_Button"
        android:layout_width="@dimen/welcome_btn"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_green"
        app:cornerRadius="30dp"
        android:text="@string/log_in" />
</androidx.appcompat.widget.LinearLayoutCompat>